--- a/src/main/webapp/templates/pages/home/index.html
+++ b/src/main/webapp/templates/pages/home/index.html
@@ -1,3 +1,31 @@
 <h1>Test</h1>
 
+<div class="row">
+    <form class="col s12">
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="username" type="text" class="validate">
+                <label for="username">Username</label>
+            </div>
+            <div class="input-field col s12">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="password" type="password" class="validate">
+                <label for="password">Password</label>
+            </div>
+            <div class="input-field col s12">
+                <input id="passwordRepeat" type="password" class="validate">
+                <label for="passwordRepeat">Password wiederholen</label>
+            </div>
+        </div>
+        <div class="row">
+            <a class="waves-effect waves-light btn-large col s4 offset-s4"><i class="material-icons right">send</i>Sing Up</a>
+        </div>
+    </form>
+</div>
+
 <a ui-sref="topic">Topics</a>
