--- a/src/main/webapp/templates/pages/home/index.html
+++ b/src/main/webapp/templates/pages/home/index.html
@@ -3,13 +3,21 @@
 <div class="row">
     <form class="col s12">
         <div class="row">
-            <div class="input-field col s12">
-                <input id="username" type="text" class="validate">
-                <label for="username">Username</label>
+            <div class="input-field col s12 m6">
+                <input id="firstname" type="text" class="validate" ng-model="request.firstname">
+                <label for="firstname">Firstname</label>
             </div>
-            <div class="input-field col s12">
+            <div class="input-field col s12 m6">
+                <input id="lastname" type="text" class="validate" ng-model="request.lastname">
+                <label for="lastname">Lastname</label>
+            </div>
+            <div class="input-field col s12 m6">
                 <input id="email" type="email" class="validate">
                 <label for="email">Email</label>
+            </div>
+            <div class="input-field col s12 m6">
+                <input id="birthday" type="date" class="validate">
+                <label for="birthday">Email</label>
             </div>
         </div>
         <div class="row">
@@ -26,6 +34,7 @@
             <a class="waves-effect waves-light btn-large col s4 offset-s4"><i class="material-icons right">send</i>Sing Up</a>
         </div>
     </form>
+    {{ request }}
 </div>
 
 <a ui-sref="topic">Topics</a>
