--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -1,3 +1,9 @@
 <p>
-  profile works!
+  profile works!<br>
+  <br>
+  ID: {{ user?.id }}<br>
+  Firstname: {{ user?.firstname }}<br>
+  lastname: {{ user?.lastname }}<br>
+  email: {{ user?.email }}<br>
+
 </p>
