First DB Actions with User
+ Register
+ Login
+ Get All User

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,18 +1,29 @@
-<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-  <form>
+<div class="mdl-grid">
 
-    <h3 class="mdl-dialog__title">{{title}}</h3>
+  <div class="mdl-cell mdl-cell--3-col"></div>
 
-    <div class="mdl-dialog__content">
-      <mdl-textfield #firstElement type="text" label="Username" floating-label></mdl-textfield>
-      <br/>
-      <mdl-textfield type="password" label="Password" floating-label></mdl-textfield>
-    </div>
+  <mdl-card mdl-shadow="2" class="mdl-cell mdl-cell--6-col">
+    <mdl-card-title>
+      <h2 mdl-card-title-text>{{ title }}</h2>
+    </mdl-card-title>
 
-    <div class="mdl-dialog__actions">
-      <button
-        type="button"
-        mdl-colored="primary" mdl-ripple>Login</button>
-    </div>
-  </form>
+    <mdl-card-supporting-text class="mdl-grid">
+
+      <div class="mdl-cell mdl-cell--1-col"></div>
+      <form class="mdl-cell mdl-cell--10-col">
+
+        <mdl-textfield type="text" label="Email" name="email" floating-label [(ngModel)]="user.email"></mdl-textfield>
+        <mdl-textfield type="password" label="Password" name="password" floating-label [(ngModel)]="user.password"></mdl-textfield>
+
+      </form>
+    </mdl-card-supporting-text>
+
+    <mdl-card-actions mdl-card-border class="mdl-grid">
+      <div class="mdl-cell mdl-cell--1-col"></div>
+      <button mdl-button mdl-colored mdl-ripple class="mdl-cell mdl-cell--10-col" (click)="submitUser()">Sign Up</button>
+    </mdl-card-actions>
+  </mdl-card>
+
+  <div class="mdl-cell mdl-cell--3-col"></div>
+
 </div>
