--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -1,9 +1,11 @@
-<p>
+<p *ngIf="users">
   profile works!<br>
-  <br>
-  ID: {{ user?.id }}<br>
-  Firstname: {{ user?.firstname }}<br>
-  lastname: {{ user?.lastname }}<br>
-  email: {{ user?.email }}<br>
-
 </p>
+
+<div *ngFor="let user of users">
+  ID: {{ user.id }}<br>
+  Firstname: {{ user.firstname }}<br>
+  lastname: {{ user.lastname }}<br>
+  email: {{ user.email }}<br>
+  <br>
+</div>
