--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -12,10 +12,18 @@
       <div class="mdl-cell mdl-cell--1-col"></div>
       <form class="mdl-cell mdl-cell--10-col">
 
-        <mdl-textfield type="text" label="Email" name="email" floating-label [(ngModel)]="user.email"></mdl-textfield>
-        <mdl-textfield type="password" label="Password" name="password" floating-label [(ngModel)]="user.password"></mdl-textfield>
+        <mdl-textfield class="mdl-cell mdl-cell--12-col" type="text" label="Email" name="email" floating-label [(ngModel)]="user.email"></mdl-textfield>
+        <mdl-textfield class="mdl-cell mdl-cell--12-col" type="password" label="Password" name="password" floating-label [(ngModel)]="user.password"></mdl-textfield>
 
       </form>
+      <div class="mdl-cell mdl-cell--1-col"></div>
+      <div class="mdl-cell mdl-cell--1-col"></div>
+
+      <div class="mdl-cell mdl-cell--10-col">
+        <div class="mdl-cell mdl-cell--12-col" *ngFor="let error of errors">{{ error }}</div>
+      </div>
+
+      <div class="mdl-cell mdl-cell--1-col"></div>
     </mdl-card-supporting-text>
 
     <mdl-card-actions mdl-card-border class="mdl-grid">
@@ -25,5 +33,6 @@
   </mdl-card>
 
   <div class="mdl-cell mdl-cell--3-col"></div>
+
 
 </div>
