added subject backend things

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
-<p>
-  dashboard works!
-</p>
-<mdl-table mdl-shadow="2" [table-model]="tableModel"></mdl-table>
+<p-dataTable class="ui-datatable" [value]="subjects">
+  <p-column field="id" header="Id"></p-column>
+  <p-column field="name" header="Name"></p-column>
+  <p-column field="creator.lastname" header="First Name"></p-column>
+  <p-column field="creator.firstname" header="Last Name"></p-column>
+</p-dataTable>
