--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,69 @@
-<p>
-  dashboard works!
-</p>
-<mdl-table mdl-shadow="2" [table-model]="tableModel"></mdl-table>
+<!--<p>-->
+<!--dashboard works!-->
+<!--</p>-->
+<!--<mdl-table mdl-shadow="2" [table-model]="tableModel"></mdl-table>-->
+
+
+<div class="mdl-grid">
+
+  <mdl-card mdl-shadow="2" class="mdl-cell mdl-cell--12-col">
+    <mdl-card-title>
+      <h2 mdl-card-title-text>Welcome, {{user.firstname}}!</h2>
+    </mdl-card-title>
+
+    <mdl-card-supporting-text class="mdl-grid">
+
+      <div class="mdl-cell--12-col mdl-grid">
+          <header class="mdl-layout__header">
+            <!-- Tabs -->
+            <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+              <a [ngClass]="{'mdl-layout__tab': true, 'is-active': semesterControl.active == 'allGrades'}">all grades</a>
+              <a *ngFor="let semester of semesters" [ngClass]="{'mdl-layout__tab': true, 'is-active': semesterControl.active == semester.name}" >{{ semester.name}}</a>
+            </div>
+          </header>
+
+        <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
+          <thead>
+          <tr>
+            <th class="mdl-data-table__cell--non-numeric">Material</th>
+            <th>Quantity</th>
+            <th>Unit price</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td class="mdl-data-table__cell--non-numeric">Acrylic (Transparent)</td>
+            <td>25</td>
+            <td>$2.90</td>
+          </tr>
+          <tr>
+            <td class="mdl-data-table__cell--non-numeric">Plywood (Birch)</td>
+            <td>50</td>
+            <td>$1.25</td>
+          </tr>
+          <tr>
+            <td class="mdl-data-table__cell--non-numeric">Laminate (Gold on Blue)</td>
+            <td>10</td>
+            <td>$2.35</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="mdl-cell--12-col mdl-grid">
+
+
+
+      </div>
+
+    </mdl-card-supporting-text>
+
+  </mdl-card>
+
+</div>
+
+<!--
+<button class="mdl-button mdl-js-button mdl-button&#45;&#45;fab">
+  <i class="material-icons">add</i>
+</button>
+-->
