--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -12,13 +12,18 @@
       <div class="mdl-cell mdl-cell--1-col"></div>
       <form class="mdl-cell mdl-cell--12-col">
 
-        <mdl-textfield type="text" label="Firstname" name="firstname" floating-label [(ngModel)]="user.firstname"></mdl-textfield>
-        <mdl-textfield type="text" label="Lastname" name="lastname" floating-label [(ngModel)]="user.lastname"></mdl-textfield>
-        <mdl-textfield type="text" label="Email" name="email" floating-label [(ngModel)]="user.email"></mdl-textfield>
-        <mdl-textfield type="password" label="Password" name="password" floating-label [(ngModel)]="user.password"></mdl-textfield>
-        <mdl-textfield type="password" label="Repeat Password" name="passwordRepeat" floating-label [(ngModel)]="passwordRepeat"></mdl-textfield>
+        <mdl-textfield class="mdl-cell mdl-cell--12-col" type="text" label="Firstname" name="firstname" floating-label [(ngModel)]="user.firstname"></mdl-textfield>
+        <mdl-textfield class="mdl-cell mdl-cell--12-col" type="text" label="Lastname" name="lastname" floating-label [(ngModel)]="user.lastname"></mdl-textfield>
+        <mdl-textfield class="mdl-cell mdl-cell--12-col" type="text" label="Email" name="email" floating-label [(ngModel)]="user.email"></mdl-textfield>
+        <mdl-textfield class="mdl-cell mdl-cell--12-col" type="password" label="Password" name="password" floating-label [(ngModel)]="user.password"></mdl-textfield>
+        <mdl-textfield class="mdl-cell mdl-cell--12-col" type="password" label="Repeat Password" name="passwordRepeat" floating-label [(ngModel)]="passwordRepeat"></mdl-textfield>
 
       </form>
+
+      <div class="mdl-cell mdl-cell--10-col">
+        <div class="mdl-cell mdl-cell--12-col" *ngFor="let error of errors">{{ error }}</div>
+      </div>
+
     </mdl-card-supporting-text>
 
     <mdl-card-actions mdl-card-border class="mdl-grid">
