--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -11,4 +11,9 @@ header div.mdl-layout__tab-bar {
   height: auto;
 }
 
+.mdl-layout__tab {
 
+  cursor: pointer;
+  color: rgba(255,255,255,.85);
+
+}
